# homework-v1

docs/: v0.1.md
ros_ws/src/ugv_msgs/: CMakeLists.txt  package.xml
ros_ws/src/ugv_msgs/msg/: ControlCommand.msg  TrackingPerformance.msg  Trajectory.msg  TrajectoryPoint.msg  VehicleState.msg
ros_ws/src/ugv_path_tracking/: CMakeLists.txt  package.xml
ros_ws/src/ugv_path_tracking/config/: controllers.yaml  pure_pursuit.yaml  stanley.yaml
ros_ws/src/ugv_path_tracking/include/ugv_path_tracking/: controller_base.hpp  pure_pursuit_controller.hpp  stanley_controller.hpp  trajectory_utils.hpp
ros_ws/src/ugv_path_tracking/launch/: path_tracking_framework.launch
ros_ws/src/ugv_path_tracking/src/: trajectory_utils.cpp
ros_ws/src/ugv_path_tracking/src/controllers/: pure_pursuit_controller.cpp  stanley_controller.cpp
ros_ws/src/ugv_path_tracking/src/nodes/: global_path_node.cpp  pure_pursuit_node.cpp  stanley_node.cpp  tracking_evaluator_node.cpp
